Add: styles for base layout
Added base, layout, and utilities folder with some basic styling for the layouts and fonts. Renamed app.scss to main.scss

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,12 @@
 </head>
 
 <body>
-    <h1>Hello World!</h1>
+    <main class="app">
+        <div class="app__logo">l</div>
+        <div class="app__title">t</div>
+        <div class="app__menu">c</div>
+        <div class="app__grid">g</div>
+    </main>
 </body>
 
 </html>
