--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,59 @@
 
 <body>
     <main class="app">
-        <div class="app__logo">l</div>
-        <div class="app__title">t</div>
-        <div class="app__menu">c</div>
+        <div class="app__logo">
+            <div class="logo">
+                <h1 class="logo__name">Vizit</h1>
+            </div>
+        </div>
+        <div class="app__title">
+            <h2 class="title">Path Finding</h2>
+        </div>
+        <div class="app__menu">
+            <button class="toggle-menu">Open Controls</button>
+            <div class="menu">
+                <div class="menu__top-controls">
+                    <div class="dropdown">
+                        <button class="dropdown__button">
+                            <span class="dropdown__button-text">Choose Path Finder</span>
+                            <svg width="18" height="10" viewBox="0 0 18 10" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M16.497 0.989027L8.99999 8.29703L1.50299 0.989027C1.36905 0.858193 1.18923 0.784947 1.00199 0.784947C0.814751 0.784947 0.634939 0.858193 0.500992 0.989027C0.436135 1.05257 0.384611 1.12842 0.349436 1.21213C0.314261 1.29584 0.296143 1.38573 0.296143 1.47653C0.296143 1.56733 0.314261 1.65721 0.349436 1.74092C0.384611 1.82463 0.436135 1.90048 0.500992 1.96403L8.47649 9.74003C8.61655 9.87655 8.8044 9.95295 8.99999 9.95295C9.19558 9.95295 9.38343 9.87655 9.52349 9.74003L17.499 1.96553C17.5643 1.90193 17.6162 1.8259 17.6517 1.74191C17.6871 1.65792 17.7054 1.56769 17.7054 1.47653C17.7054 1.38537 17.6871 1.29513 17.6517 1.21114C17.6162 1.12715 17.5643 1.05112 17.499 0.987526C17.365 0.856693 17.1852 0.783447 16.998 0.783447C16.8108 0.783447 16.6309 0.856693 16.497 0.987526V0.989027Z"
+                                    fill="#FFFFE3" />
+                            </svg>
+                        </button>
+                        <div class="dropdown__menu">
+                            <p class="option">A* search</p>
+                            <p class="option">Breadth first search</p>
+                            <p class="option">Depth first search</p>
+                        </div>
+                    </div>
+                    <div class="dropdown">
+                        <button class="dropdown__button">
+                            <span class="dropdown__button-text">Choose Maze Generator</span>
+                            <svg width="18" height="10" viewBox="0 0 18 10" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M16.497 0.989027L8.99999 8.29703L1.50299 0.989027C1.36905 0.858193 1.18923 0.784947 1.00199 0.784947C0.814751 0.784947 0.634939 0.858193 0.500992 0.989027C0.436135 1.05257 0.384611 1.12842 0.349436 1.21213C0.314261 1.29584 0.296143 1.38573 0.296143 1.47653C0.296143 1.56733 0.314261 1.65721 0.349436 1.74092C0.384611 1.82463 0.436135 1.90048 0.500992 1.96403L8.47649 9.74003C8.61655 9.87655 8.8044 9.95295 8.99999 9.95295C9.19558 9.95295 9.38343 9.87655 9.52349 9.74003L17.499 1.96553C17.5643 1.90193 17.6162 1.8259 17.6517 1.74191C17.6871 1.65792 17.7054 1.56769 17.7054 1.47653C17.7054 1.38537 17.6871 1.29513 17.6517 1.21114C17.6162 1.12715 17.5643 1.05112 17.499 0.987526C17.365 0.856693 17.1852 0.783447 16.998 0.783447C16.8108 0.783447 16.6309 0.856693 16.497 0.987526V0.989027Z"
+                                    fill="#FFFFE3" />
+                            </svg>
+                        </button>
+                        <div class="dropdown__menu">
+                            <p class="option">Random maze</p>
+                            <p class="option">Reverse backtracking</p>
+                        </div>
+                    </div>
+                    <div class="grid-controls">
+                        <button class="grid__clear-grid">Clear Grid</button>
+                        <button class="grid__clear-path">Clear Path</button>
+                    </div>
+                </div>
+                <div class="menu__bottom-controls">
+                    <button class="visuliaze">Visualize</button>
+                </div>
+            </div>
+        </div>
         <div class="app__grid">g</div>
     </main>
 </body>
