--- a/src/index.html
+++ b/src/index.html
@@ -54,12 +54,18 @@
                         </div>
                     </div>
                     <div class="grid-controls">
-                        <button class="grid__clear-grid">Clear Grid</button>
-                        <button class="grid__clear-path">Clear Path</button>
+                        <button class="secondary-button">Clear Grid</button>
+                        <button class="secondary-button">Clear Path</button>
                     </div>
                 </div>
                 <div class="menu__bottom-controls">
-                    <button class="visuliaze">Visualize</button>
+                    <button class="visualize">
+                        <span class="visualize__text">Visualize</span>
+                        <svg width="18" height="24" viewBox="0 0 18 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M1.5 16.5L9 22.5L16.5 16.5M9 22.5V1.5" stroke="#10100E" stroke-width="2"
+                                stroke-linecap="round" stroke-linejoin="round" />
+                        </svg>
+                    </button>
                 </div>
             </div>
         </div>
