Refactor: mobile layout and add temp logo

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,11 @@
     <main class="app">
         <div class="app__logo">
             <div class="logo">
-                <h1 class="logo__name">Vizit</h1>
+                <!-- <h1 class="logo__name">Vizit</h1> -->
+                <svg width="32" height="32" viewBox="0 0 1024 1024">
+                    <path fill="currentColor"
+                        d="M640 384v256H384V384h256zm64 0h192v256H704V384zm-64 512H384V704h256v192zm64 0V704h192v192H704zm-64-768v192H384V128h256zm64 0h192v192H704V128zM320 384v256H128V384h192zm0 512H128V704h192v192zm0-768v192H128V128h192z" />
+                </svg>
             </div>
         </div>
         <div class="app__title">
