Feat: render grid with nodes
Test rendering nodes/cells in grid

--- a/src/index.html
+++ b/src/index.html
@@ -74,7 +74,9 @@
                 </div>
             </div>
         </div>
-        <div class="app__grid">g</div>
+        <div class="app__grid">
+            <div class="grid"></div>
+        </div>
     </main>
 </body>
 
