Feat: Reset/Clear grid functionality

--- a/src/index.html
+++ b/src/index.html
@@ -58,8 +58,8 @@
                         </div>
                     </div>
                     <div class="grid-controls">
-                        <button class="secondary-button">Clear Grid</button>
-                        <button class="secondary-button">Clear Path</button>
+                        <button class="clear-grid secondary-button">Clear Grid</button>
+                        <button class="clear-path secondary-button">Clear Path</button>
                     </div>
                 </div>
                 <div class="menu__bottom-controls">
