Feat: Pick algorithm from dropdown
Added the ability to pick the type of algorithm to visualize and DRYed the code.

--- a/src/index.html
+++ b/src/index.html
@@ -37,9 +37,9 @@
                             </svg>
                         </button>
                         <div class="dropdown__menu">
-                            <p class="option">A* search</p>
-                            <p class="option">Breadth first search</p>
-                            <p class="option">Depth first search</p>
+                            <p class="option" data-algo="A*">A* search</p>
+                            <p class="option" data-algo="BFS">Breadth first search</p>
+                            <p class="option" data-algo="DFS">Depth first search</p>
                         </div>
                     </div>
                     <div class="dropdown">
