Add: Maze algorithm
Added recursive backtracker algorithm to generate random maze.

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
             <button class="toggle-menu">Open Controls</button>
             <div class="menu">
                 <div class="menu__top-controls">
-                    <div class="dropdown">
+                    <div class="dropdown" data-dropdown-type="finders">
                         <button class="dropdown__button">
                             <span class="dropdown__button-text">Choose Path Finder</span>
                             <svg width="18" height="10" viewBox="0 0 18 10" fill="none"
@@ -42,7 +42,7 @@
                             <p class="option" data-algo="DFS">Depth first search</p>
                         </div>
                     </div>
-                    <div class="dropdown">
+                    <div class="dropdown" data-dropdown-type="mazers">
                         <button class="dropdown__button">
                             <span class="dropdown__button-text">Choose Maze Generator</span>
                             <svg width="18" height="10" viewBox="0 0 18 10" fill="none"
