Fix: Maze generator dropdown
The maze generator dropdown now functions as expected.

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
                     </div>
                     <div class="dropdown" data-dropdown-type="mazers">
                         <button class="dropdown__button">
-                            <span class="dropdown__button-text">Choose Maze Generator</span>
+                            <span class="dropdown__button-text">Generate Maze</span>
                             <svg width="18" height="10" viewBox="0 0 18 10" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -53,8 +53,8 @@
                             </svg>
                         </button>
                         <div class="dropdown__menu">
-                            <p class="option">Random maze</p>
-                            <p class="option">Reverse backtracking</p>
+                            <p class="option" data-algo="prims">Prim's Algorithm</p>
+                            <p class="option" data-algo="recursive">Recursive Backtracker</p>
                         </div>
                     </div>
                     <div class="grid-controls">
