Feat: toggle menu on mobile-view

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,13 @@
             <h2 class="title">Path Finding</h2>
         </div>
         <div class="app__menu">
-            <button class="toggle-menu">Open Controls</button>
+            <button class="toggle-menu">
+                <span class="toggle-menu__text">Open controls</span>
+                <svg class="toggle-menu__chevron" width="20" height="12" viewBox="0 0 20 12" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path d="M0 0L10 12L20 0H0Z" fill="#FFFFE3" />
+                </svg>
+            </button>
             <div class="menu">
                 <div class="menu__top-controls">
                     <div class="dropdown" data-dropdown-type="finders">
