Test: stop and reset buttons

--- a/src/index.html
+++ b/src/index.html
@@ -79,6 +79,10 @@
                                 stroke-linecap="round" stroke-linejoin="round" />
                         </svg>
                     </button>
+                    <div class="viz-controls">
+                        <button class="secondary-button">Stop</button>
+                        <button class="secondary-button">Reset</button>
+                    </div>
                 </div>
             </div>
         </div>
