Refactor: viz controls class names

--- a/src/index.html
+++ b/src/index.html
@@ -80,8 +80,8 @@
                         </svg>
                     </button>
                     <div class="viz-controls">
-                        <button class="secondary-button">Stop</button>
-                        <button class="secondary-button">Reset</button>
+                        <button class="play_pause-viz secondary-button">Pause</button>
+                        <button class="cancel-viz secondary-button">Cancel</button>
                     </div>
                 </div>
             </div>
